somewhat fixed overflow issues still noticeable when containers change color

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,30 +3,46 @@
 	padding: 0;
 }
 
+html, body{
+	height: 100%;
+}
+
+a{
+	color: rgb(0, 162, 104);
+}
 
 .nav, .nav-content, .tabs, .tabs .tab {
 	height: 100%;
 	background-color: rgb(0, 162, 104);
 }
 
-.div, .col, .row, .row .col.m9, .valign-wrapper{
+.div, .row .col.m9, .valign-wrapper{
 	width: 100%;
 	height: 100%;
 }
 
+#welcome .row, #welcome .row .col, .container{
+	height: 100%;
+}
+
 .section{
-	margin: 0;
+	margin:0;
 	padding: 0;
-	margin-right: 0px;
 	height: 100vh;
+	min-height: 100%;
  
 }
+
+/*.container:nth-child(even){
+	background-color: rgb(0, 162, 104);
+	color: white;
+}*/
 
 .container{
 	margin: 0;
 	padding: 20px;
 	width: 100%;
-	min-height: 400px;
+	height: 100%;
 }
 
 .btn{
